--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>webdrivermanager</artifactId>
             <version>4.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting -->
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>maven-cucumber-reporting</artifactId>
+            <version>5.3.0</version>
+        </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -99,10 +105,37 @@
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+                <version>5.3.0</version>
+                <executions>
+                    <execution>
+                        <id>execution</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <projectName>ExecutionResult</projectName>
+                            <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
+                            <inputDirectory>${project.build.directory}</inputDirectory>
+                            <jsonFiles>
+                                <param>**/*.json</param>
+                            </jsonFiles>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
 
-<!-- <version>3.0.0-M3</version>
-                <configuration>
-                <testFailureIgnore>true</testFailureIgnore>-->
+<!--<configuration>-->
+<!--<projectName>ExecutionResult</projectName>-->
+<!--<outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>-->
+<!--<inputDirectory>${project.build.directory}</inputDirectory>-->
+<!--<jsonFiles>-->
+<!--    <param>**/*.json</param>-->
+<!--</jsonFiles>-->
+<!--</configuration>-->
