--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -1,4 +1,1 @@
-url=https://www.amazon.co.uk
-weatherBaseURI=http://demoqa.com/utilities/weather/city/
-ENDPOINT_GET_BOOK_BY_ISBN=https://www.googleapis.com/books/v1/volumes
-implicitlyWait=10
+url=https://www.next.co.uk/
