Feature Name Changed

--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -1,4 +1,7 @@
-url=https://www.amazon.co.uk
+#url=https://www.amazon.co.uk
+#url=https://www.next.co.uk/
+#url=https://www.google.co.uk/
+url=https://sniperelite.com/
 weatherBaseURI=http://demoqa.com/utilities/weather/city/
 ENDPOINT_GET_BOOK_BY_ISBN=https://www.googleapis.com/books/v1/volumes
 implicitlyWait=10
